--- a/CapStone-1/predict-test.ipynb
+++ b/CapStone-1/predict-test.ipynb
@@ -26,7 +26,7 @@
    "source": [
     "person = {\n",
     "    \"age\": 32, \n",
-    "    \"workclass\": \"Private\",  # Corrected the key here\n",
+    "    \"workclass\": \"Private\",  \n",
     "    \"final_weight\": 334409, \n",
     "    \"education\": \"Master\", \n",
     "    \"educationnum\": 12,\n",
