--- a/CapStone-2/predict-test.ipynb
+++ b/CapStone-2/predict-test.ipynb
@@ -25,20 +25,18 @@
    "outputs": [],
    "source": [
     "person = {\n",
-    "    \"age\": 32, \n",
-    "    \"workclass\": \"Private\",  # Corrected the key here\n",
-    "    \"final_weight\": 334409, \n",
-    "    \"education\": \"Master\", \n",
-    "    \"educationnum\": 12,\n",
-    "    \"marital_status\": \"Married-civ-spouse\", \n",
-    "    \"occupation\": \"Prof-specialty\", \n",
-    "    \"relationship\": \"Wife\", \n",
-    "    \"race\": \"White\", \n",
-    "    \"gender\": \"Female\",\n",
-    "    \"capital_gain\": 0, \n",
-    "    \"capital_loss\": 0, \n",
-    "    \"hours_per_week\": 30, \n",
-    "    \"native_country\": \"France\"\n",
+    "  \"CustomerId\": \"15975382\",\n",
+    "  \"CreditScore\": 650,\n",
+    "  \"Geography\": \"Germany\",\n",
+    "  \"Gender\": \"Female\",\n",
+    "  \"Age\": 29,\n",
+    "  \"Tenure\": 5,\n",
+    "  \"Balance\": 125000.75,\n",
+    "  \"NumOfProducts\": 3,\n",
+    "  \"HasCrCard\": 1,\n",
+    "  \"IsActiveMember\": 1,\n",
+    "  \"EstimatedSalary\": 50000.00\n",
+    "\n",
     "}"
    ]
   },
